[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fish/Enemy Swim 3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_Angler.gd" type="Script" id=2]
[ext_resource path="res://Scripts/WakeCollider.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fish/Enemy Attack 2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fish/Enemy Swim 1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fish/Enemy Attack 1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fish/Enemy Swim 2.png" type="Texture" id=9]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 4
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 4
fps = 20.0
frame_0/texture = ExtResource( 8 )
frame_0/delay_sec = 0.1
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.4
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.2
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.25

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.0
height = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 201.12

[sub_resource type="CircleShape2D" id=5]
radius = 40.0031

[node name="EnemyAngler" type="KinematicBody2D"]
collision_layer = 65
collision_mask = 33
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 309

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Idle" type="Sprite" parent="Sprite"]
texture = SubResource( 1 )

[node name="Attack" type="Sprite" parent="Sprite"]
visible = false
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="WakeCollider" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakeCollider"]
visible = false
shape = SubResource( 4 )

[node name="Death Collider" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Collider"]
shape = SubResource( 5 )

[connection signal="body_entered" from="WakeCollider" to="." method="_on_WakeCollider_body_entered"]
[connection signal="area_entered" from="Death Collider" to="." method="_on_Death_Collider_area_entered"]
